2009-07-23  Marek Habersack  <mhabersack@novell.com>

	* AspGenerator.cs: TextParsed takes a different approach to
	post-processing text blocks now. It applies, in order, client-side
	comment, tag and expression regular expressions to the text 
	and splits it into blocks of different types. Then the blocks are
	processed accordingly.
	Check for duplicate control IDs at the end of parse. Fixes bug
	#524358

2009-07-21  Marek Habersack  <mhabersack@novell.com>

	* AspTokenizer.cs: in put_back, store inTag value as well.

	* AspParser.cs: correctly parse code like "<asp:tag> < </asp:tag>"

	* BuildManager.cs: GetReferencedAssemblies unconditionally
	includes all assemblies from bin/ for precompiled sites. Fixes bug
	#502016

2009-07-18  Marek Habersack  <mhabersack@novell.com>

	* DefaultResourceProvider.cs: if GetResourceObject is passed a
	null or empty classKey it just returns null.

	* AppResourcesAssemblyBuilder.cs: satellite assemblies are now
	built using al instead of gmcs - makes the build slightly faster.

2009-07-13  Marek Habersack  <mhabersack@novell.com>

	* AppCodeCompiler.cs: wrap HttpApplication.LoadTypeFromBin call in
	try/catch, so that we can wrap the possible exception in
	HttpException.

2009-07-09  Marek Habersack  <mhabersack@novell.com>

	* DefaultResourceProvider.cs, DefaultResourceProviderFactory.cs:
	added

2009-06-30  Marek Habersack  <mhabersack@novell.com>

	* AspGenerator.cs: TextParsed must remove client-side comments
	from the passed text before attempting to parse the text for
	server side controls and expressions. Fixes bug #517656

2009-06-29 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* TemplateControlCompiler.cs: use the 'Empty' field for Unit and
	FontUnit.

2009-06-25 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* BuildManager.cs: backport r131138.

2009-06-15  Marek Habersack  <mhabersack@novell.com>

	* AspGenerator.cs: CreateRootBuilder quits when root builder