@@ -1,3 +1,8 @@
+2009-07-23 Gonzalo Paniagua Javier <gonzalo@novell.com>
+
+	* BuildManager.cs: precompilation setup failed if the precompiled
+	virtual directory was / and it was deployed somewhere else.
+
 2009-07-23  Marek Habersack  <mhabersack@novell.com>
 
 	* AspGenerator.cs: TextParsed takes a different approach to
